--- a/src/Main.css
+++ b/src/Main.css
@@ -1,56 +1,33 @@
-NavBar {
+h1 {
+    font-size: 3.2em;
+    line-height: 1.1;
+  }
+
+nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
     position: relative;
-    height: var(--header-height);
+    font-size: 1.8em;
     margin: 1rem;
 }
 
-/* 1. Use a more-intuitive box-sizing model */
-*, *::before, *::after {
-    box-sizing: border-box;
+/* unvisited link */
+a:link {
+    color: red;
   }
   
-  /* 2. Remove default margin */
-  * {
-    margin: 0;
+  /* visited link */
+  a:visited {
+    color: green;
   }
   
-  body {
-    /* 3. Add accessible line-height */
-    line-height: 1.5;
-    /* 4. Improve text rendering */
-    -webkit-font-smoothing: antialiased;
+  /* mouse over link */
+  a:hover {
+    color: hotpink;
   }
   
-  /* 5. Improve media defaults */
-  img, picture, video, canvas, svg {
-    display: block;
-    max-width: 100%;
-  }
-  
-  /* 6. Inherit fonts for form controls */
-  input, button, textarea, select {
-    font: inherit;
-  }
-  
-  /* 7. Avoid text overflows */
-  p, h1, h2, h3, h4, h5, h6 {
-    overflow-wrap: break-word;
-  }
-  
-  /* 8. Improve line wrapping */
-  p {
-    text-wrap: pretty;
-  }
-  h1, h2, h3, h4, h5, h6 {
-    text-wrap: balance;
-  }
-  
-  /*
-    9. Create a root stacking context
-  */
-  #root, #__next {
-    isolation: isolate;
+  /* selected link */
+  a:active {
+    color: blue;
   }
