--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -4,3 +4,10 @@
     column-gap: 10px;
     row-gap: 10px;
 }
+
+#club-list {
+    display: grid;
+    grid-template-columns: 30% 30% 30%;
+    column-gap: 10px;
+    row-gap: 10px;
+}
