--- a/src/Main.css
+++ b/src/Main.css
@@ -73,6 +73,11 @@ h1, h2, h3 {
   margin-bottom: 1rem;
 }
 
+#pledgedetails {
+  font-weight: bold;
+  color: var(--secondary-color)
+}
+
 a {
   text-decoration: none;
   color: var(--secondary-color);
@@ -136,6 +141,19 @@ form label {
   form button {
     width: 100%;
     font-size: 1.2rem;
+  }
+
+  input[type="checkbox"] {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    width: 10%
+  }
+
+  #checkboxlabel {
+    display: flex;
+    margin-left: 10px;
+    gap: 10px; /* Space between checkbox and label text */
   }
   
   /* Images */
