--- a/src/Main.css
+++ b/src/Main.css
@@ -32,7 +32,7 @@
 /* General Styles */
 body {
   margin: 0;
-  padding: 0;
+  padding: 1rem;
   font-family: 'Roboto', sans-serif;
   background-color: var(--background-color);
   color: var(--text-color);
